--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -42,7 +42,6 @@
 .suspects-header {
   grid-area: suspects-header;
   display: flex;
-  /* min-height: 40px; */
   overflow-x: auto;
 }
 
@@ -50,16 +49,12 @@
   grid-area: weapons-header;
   display: flex;
   flex-direction: column;
-  /* min-width: 150px; */
   overflow-y: auto;
 }
 
 .header-cell {
   padding: 10px;
-  /* min-width: 80px;
-  min-height: 40px; */
   text-align: center;
-  /* border: 1px solid #e9ecef; */
   font-weight: 500;
   display: flex;
   align-items: center;
@@ -68,18 +63,14 @@
 }
 
 .suspect-header {
-  /* background-color: #f8f0fc; */
   color: #5f3dc4;
-  /* flex: 1; */
 }
 
 .weapon-header {
-  /* background-color: #e6fcf5; */
   color: #087f5b;
 }
 
 .location-header {
-  /* background-color: #fff3bf; */
   color: #e67700;
 }
 
@@ -101,18 +92,14 @@
 
 .sw-matrix {
   grid-area: sw;
-  /* border-right: 2px solid #dee2e6;
-  border-bottom: 2px solid #dee2e6; */
 }
 
 .wl-matrix {
   grid-area: wl;
-  /* border-bottom: 2px solid #dee2e6; */
 }
 
 .sl-matrix {
   grid-area: sl;
-  /* border-right: 2px solid #dee2e6; */
 }
 
 .matrix-row {
@@ -145,10 +132,9 @@
 }
 
 .matrix-cell.empty::after {
-  content: "□";
+  /* content: "□"; */
   color: #ced4da;
   position: absolute;
-  font-size: 1rem;
 }
 
 .matrix-cell.✅ {
